samples/_failures_safe/1761657317_e1fde4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a847a4b9.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_a847a4b9.c:156:9: error: expected declaration or statement at end of input
  156 |         case TOKEN_NUMBER: return "NUMBER";
      |         ^~~~
./samples/SAFE/__tmp_a847a4b9.c:156:9: error: expected declaration or statement at end of input
